# siworkgroup

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  create_tables.py  full_setup.py  init_db.py  init_db_sync.py  pyproject.toml  run_migrate.py  setup_db.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py  tasks.py  worker.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  claws.py  permissions.py  sandbox.py
backend/app/api/ws/: chat_ws.py
backend/app/core/: config.py  database.py  deps.py  logging.py  security.py
backend/app/models/: __init__.py  audit.py  claw.py  permission.py  session.py  user.py
backend/app/sandbox/: docker_manager.py  seccomp_profile.json
backend/tests/: conftest.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/claws/[id]/chat/: page.tsx
frontend/app/claws/new/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: providers.tsx
frontend/components/ui/: toast.tsx  toaster.tsx
frontend/lib/api/: client.ts
frontend/lib/hooks/: use-claws.ts  use-toast.ts
frontend/lib/socket/: use-chat-socket.ts
frontend/lib/store/: auth-store.ts  chat-store.ts
scripts/: fix-nextjs-config.py  init-db.sql  local-setup.sh  start-dev.sh
